@@ -1,3 +1,8 @@
+2007-07-19  Nick Clifton  <nickc@redhat.com>
+
+	PR binutils/4802
+	* srconv.c (strip_suffix): Add const qualifier to argument.
+
 2007-07-16  Nick Clifton  <nickc@redhat.com>
 
 	* po/uk.po: New Ukrainian translation.
